<resources>
    <string name="app_name">icare</string>
    <string name="l_icare">iCare</string>
    <string name="b_sesion">Iniciar sesión</string>
    <string name="b_crear">Crear cuenta</string>
    <string name="l_email">Correo electrónico</string>
    <string name="l_contrasena">Contraseña</string>
    <string name="messageWithLink"><u>¿No tienes una cuenta? Puedes crear una aquí</u></string>
    <string name="messageWithLinkCrear"><u>¿Ya tienes una cuenta? Puedes iniciar sesión aquí</u></string>
    <string name="b_escanear">Escanear QR</string>
    <string name="l_buscar_paciente">Buscar usuario</string>
    <string name="l_escanear_error">No se ha podido escanear el código QR correctamente. Puedes ingresar el identificador del usuario o intentar escanear nuevamente.</string>
    <string name="b_buscar_id">Buscar por identificador</string>
    <string name="b_escanear_n">Escanear nuevamente</string>
    <string name="l_edad">Edad:</string>
    <string name="l_eps">EPS:</string>
    <string name="b_fichas"> Ver fichas médicas</string>
    <string name="b_medicamentos">Ver medicamentos</string>
    <string name="b_inginfo">Ingresar información nueva</string>
    <string name="l_agregarinfo">Agregar información</string>
    <string name="l_cualinfo">¿Cuál información deseas agregar?</string>
    <string name="l_agregari">Agregar información</string>
    <string name="l_comoagregar">¿Cómo deseas agregar la información?</string>
    <string name="b_guardar">Guardar foto</string>
    <string name="l_gfoto">Agregar foto</string>
    <string name="bfoto">Tomar una nueva foto</string>
    <string name="b_volver">Volver</string>
    <string name="l_verfichas">Ver fichas médicas</string>
    <string name="b_vermas">Ver más fichas</string>
    <string-array name="como">
        <item>Tomar foto</item>
        <item>Ingresar manualmente</item>
    </string-array>
    <string-array name="informacion">
        <item>Ficha médica</item>
        <item>Medicamentos</item>
        <item>Formato cuidadores</item>
    </string-array>
</resources>
